--- a/index.html
+++ b/index.html
@@ -51,10 +51,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td colspan="3">In</td>
-                </tr>
-                <tr>
-                    <td colspan="3">progress...</td>
+                    <td>You don't have any scores yet</td>
                 </tr>
             </tbody>
         </table>
