--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>You don't have any scores yet</td>
+                    <td colspan="3">You don't have any scores yet</td>
                 </tr>
             </tbody>
         </table>
