--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Reaction Test Lab is a website where you can test and improve your reaction time">
     <title>Reaction Test Lab</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="main.js" defer></script>
+    <link rel="stylesheet" href="./src/css/styles.css">
+    <script type='module' src="./src/js/controller.js"></script>
 </head>
 
 <body>
@@ -22,17 +22,17 @@
             <ul>
                 <li>
                     <a href="#">
-                        <img src="resources/reaction-time-logo.png" width="42" height="42" alt="reaction time icon"
+                        <img src="./src/img/reaction-time-logo.png" width="42" height="42" alt="reaction time icon"
                             loading="lazy">Reaction Time Test</a>
                 </li>
                 <li>
                     <a href="#highscore">
-                        <img src="resources/3388492-200.png" width="42" height="42" alt="highscore icon"
+                        <img src="./src/img/3388492-200.png" width="42" height="42" alt="highscore icon"
                             loading="lazy">Highscores</a>
                 </li>
                 <li id="settings-btn">
                     <a href="#">
-                        <img src="resources//color_settings_icon.png" width="42" height="42" alt="settings icon" loading="lazy">
+                        <img src="./src/img/color_settings_icon.png" width="42" height="42" alt="settings icon" loading="lazy">
                         Settings
                     </a>
                 </li>
