--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
                 <label for="ready-color">Ready color</label>
                 <input type="color" name="ready-color" id="ready-color" value="#91ffa0">
             </section>
+            <div>
             <button id="save-settings-btn">Save</button>
             <button id="reset-settings-btn">Reset</button>
+            </div>
         </section>
         <section class="settings-popup-background">
 
